[package]
name = "tftp-ro"
description = "Read-Only TFTP Server"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/stevebob/tftp-ro"
repository = "https://github.com/stevebob/tftp-ro"

[dependencies]
tokio = { version = "0.2", features = ["macros", "fs", "udp", "stream", "io-util"] }
futures = "0.3"
simon = "0.3"
env_logger = "0.7"
log = "0.4"
